// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TestsToolTip should render correctly 1`] = `
<span
  className="tooltip-text"
>
  <p>
    mockToolTipHeader
  </p>
  <div>
    <span>
      sampleA
    </span>
    <span>
      sampleB
    </span>
    <span>
      sampleC
    </span>
  </div>
</span>
`;

exports[`Component: TestsToolTip should render without toolTipBody 1`] = `
<span
  className="tooltip-text"
>
  <p>
    mockToolTipHeader
  </p>
  <div />
</span>
`;

exports[`Component: TestsToolTip should render without toolTipHeader 1`] = `
<span
  className="tooltip-text"
>
  <div>
    <span>
      sampleA
    </span>
    <span>
      sampleB
    </span>
    <span>
      sampleC
    </span>
  </div>
</span>
`;
